--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">ProyectoFinal</string>
-    <string name="title_usuario">Usuario</string>
+    <string name="title_contactos">Contactos</string>
     <string name="title_chats">Chats</string>
     <string name="title_settings">Ajustes</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
